--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,6 @@ if(GLM_FOUND)
 	TARGET_LINK_LIBRARIES(${EXE_NAME} ${GLM_LIBRARY})
 endif()
 
-INCLUDE_DIRECTORIES(I:/LIB/TBB/TBB.4.3/include)
-LINK_DIRECTORIES(I:/LIB/TBB/TBB.4.3/lib/intel64/vc11)
-TARGET_LINK_LIBRARIES(${EXE_NAME} I:/LIB/TBB/TBB.4.3/lib/intel64/vc11/tbb.lib I:/LIB/TBB/TBB.4.3/lib/intel64/vc11/tbb_debug.lib)
+INCLUDE_DIRECTORIES(E:/Librairies/TBB/tbb43_20150316oss/include)
+LINK_DIRECTORIES(E:/Librairies/TBB/tbb43_20150316oss/lib/intel64/vc11)
+TARGET_LINK_LIBRARIES(${EXE_NAME} E:/Librairies/TBB/tbb43_20150316oss/lib/intel64/vc11/tbb.lib E:/Librairies/TBB/tbb43_20150316oss/lib/intel64/vc11/tbb_debug.lib)
